--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -159,7 +159,7 @@ const GAMES = {
         const $games_content = $games_container.querySelector('.games-content');
         const $game_cards = $games_container.querySelectorAll('.game-card');
         const $more_games_btn = document.getElementById('show-games-button');
-        const games_btn_classNames = ['dark:bg-gray-800/80', 'bg-gray-300', 'px-4', 'hover:scale-102', 'active:scale-95' , 'rounded-tl-xl', 'rounded-tr-xl'];
+        const games_btn_classNames = ['dark:bg-gray-900/80', 'bg-gray-300/50', 'px-4', 'rounded-tl-xl', 'rounded-tr-xl'];
 
         let moreGamesOpened = false;
         $more_games_btn.addEventListener('click', function() {
