--- a/src/pages/[locale]/index.astro
+++ b/src/pages/[locale]/index.astro
@@ -45,7 +45,7 @@ const creador = translate.creator_name;
         </section>
 
         {/* CONTACT SECTION */}
-        <section class="mb-60" data-section="about-me" aria-label="About me section">
+        <section class="mb-60 pt-10" data-section="about-me" aria-label="About me section">
             <AboutMe creador={creador} translate={translate} locale={locale} />
         </section>
     </div>
