--- a/src/components/IntroSection.astro
+++ b/src/components/IntroSection.astro
@@ -114,13 +114,13 @@ const cfgs_started_at = 2022;
                 <div class="flex flex-col w-full gap-7 md:w-3xl mx-0 md:mx-auto px-4 md:px-0" aria-label="Contenedor de frameworks">
                     <div
                         id="frameworks-container" 
-                        class="relative w-full flex justify-center md:justify-start items-center flex-wrap flex-row gap-3 overflow-hidden md:overflow-auto max-h-17 md:max-h-full transition-all duration-500 px-0 py-11"
+                        class="relative w-full flex justify-center md:justify-start items-center flex-wrap flex-row gap-2 overflow-hidden md:overflow-auto max-h-17 md:max-h-full transition-all duration-500 px-0 py-11"
                     >
                         {
                             FRAMEWORKS.map((framework) => {
                                 const { name, animation_delay, img } = framework;
                                 return (
-                                    <div class="flex flex-row justify-center items-center gap-2 px-5 md:px-4 py-2 md:py-2 rounded-full dark:bg-gray-800 bg-gray-100 animate-fade-in framework-card dark:drop-shadow-none drop-shadow-sm drop-shadow-black/50"
+                                    <div class="flex flex-row justify-center items-center gap-2 px-5 m-1 md:px-4 py-2 md:py-2 rounded-full dark:bg-gray-800 bg-gray-100 animate-fade-in framework-card dark:drop-shadow-none drop-shadow-sm drop-shadow-black/50"
                                         style={`animation-delay: ${animation_delay}ms;`}
                                     >
                                         <img src={img} alt={`Image of ${name}`} class={`size-5 ${name.toLowerCase() === "java" ? '-translate-y-0.75' : ''}`} />
