--- a/src/components/IntroSection.astro
+++ b/src/components/IntroSection.astro
@@ -120,7 +120,7 @@ const cfgs_started_at = 2022;
                             FRAMEWORKS.map((framework) => {
                                 const { name, animation_delay, img } = framework;
                                 return (
-                                    <div class="flex flex-row justify-center items-center gap-2 px-5 m-1 md:px-4 py-2 md:py-2 rounded-full dark:bg-gray-800 bg-gray-100 animate-fade-in framework-card dark:drop-shadow-none drop-shadow-sm drop-shadow-black/50"
+                                    <div class="flex flex-row justify-center items-center gap-2 px-5 m-1 md:px-4 py-2 md:py-2 rounded-full dark:bg-gray-800 bg-gray-100 animate-fade-in framework-card dark:drop-shadow-none drop-shadow-sm drop-shadow-black/50 my-3"
                                         style={`animation-delay: ${animation_delay}ms;`}
                                     >
                                         <img src={img} alt={`Image of ${name}`} class={`size-5 ${name.toLowerCase() === "java" ? '-translate-y-0.75' : ''}`} />
