Improving Snake Game link part

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -77,8 +77,8 @@ const GAMES = {
         image: snakeImg.src,
         code_link: 'https://github.com/yarosprojects/snake-yarosprojects',
         description: [
-            translate.projects.tetris.paragraph_1,
-            translate.projects.tetris.paragraph_2,
+            translate.projects.snake.paragraph_1,
+            translate.projects.snake.paragraph_2,
         ],
         frameworks: {
             vite: {
