Adding fr-FR | pl-PL | pt-PT

--- a/src/pages/[locale]/index.astro
+++ b/src/pages/[locale]/index.astro
@@ -11,8 +11,11 @@ export function getStaticPaths() {
     return [
         { params: { locale: "es-ES" } },
         { params: { locale: "ca-ES" } },
-        { params: { locale: "en-GB" } },
-        { params: { locale: "ua-UK" } },
+        { params: { locale: "en-EN" } },
+        { params: { locale: "uk-UA" } },
+        { params: { locale: "fr-FR" } },
+        { params: { locale: "pt-PT" } },
+        { params: { locale: "pl-PL" } },
     ];
 }
 
