--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -104,7 +104,7 @@ const navContent = getNavContent(locale);
 
                     <div 
                         id="themes-menu"
-                        class={`min-w-[150px] absolute right-0 top-full transition-all dark:bg-gray-900 bg-gray-100 dark:drop-shadow-none drop-shadow-md drop-shadow-black/20 rounded-md z-9997 hidden max-[260px]:-right-10 max-[220px]:-right-13 ${locale === "ua-UK" ? 'max-[220px]:w-full' : ''}`}
+                        class={`min-w-[150px] absolute right-0 top-full transition-all dark:bg-gray-900 bg-gray-100 dark:drop-shadow-none drop-shadow-md drop-shadow-black/20 rounded-md z-9997 hidden max-[260px]:-right-10 max-[220px]:-right-13 ${locale === "uk-UA" ? 'max-[220px]:w-full' : ''}`}
                         aria-label="Theme choice menu"
                         aria-hidden="true"
                     >
@@ -116,11 +116,11 @@ const navContent = getNavContent(locale);
                                         return(
                                             <li
                                                 id={`${id}-theme`}
-                                                class={`w-full flex max-[220px]:flex-wrap justify-between items-center group transition-colors px-3 py-2 rounded-md dark:hover:bg-gray-800 hover:bg-gray-300 ${locale === "ua-UK" ? 'gap-5 max-[220px]:gap-2' :''}`}
+                                                class={`w-full flex max-[220px]:flex-wrap justify-between items-center group transition-colors px-3 py-2 rounded-md dark:hover:bg-gray-800 hover:bg-gray-300 ${locale === "uk-UA" ? 'gap-5 max-[220px]:gap-2' :''}`}
                                                 aria-label={`${label} theme choice`}
                                                 data-themeChoice={`${id}`}
                                             >
-                                                <span class={`select-none text-sm dark:text-white text-black ${locale === "ua-UK" ? 'min-w-[125px]' : ''}`}>
+                                                <span class={`select-none text-sm dark:text-white text-black ${locale === "uk-UA" ? 'min-w-[125px]' : ''}`}>
                                                     {name}
                                                 </span>
                                                 <i class={`${icon} text-base dark:text-white text-black`} />
